Reorganize backend and frontend modules